--- a/android/apollo/res/layout/view_dht_promotions_item.xml
+++ b/android/apollo/res/layout/view_dht_promotions_item.xml
@@ -61,7 +61,9 @@
         android:layout_height="match_parent"
         android:background="@color/basic_blue_highlight"
         android:clickable="false"
-        android:drawablePadding="10dp"
+        android:drawablePadding="6dp"
+        android:paddingStart="4dp"
+        android:paddingEnd="6dp"
         android:gravity="center_vertical"
         android:layout_marginEnd="15dp"
         android:text="@string/download"
