--- a/android/res/layout-land/activity_buy.xml
+++ b/android/res/layout-land/activity_buy.xml
@@ -56,7 +56,7 @@
 
                 <ImageView android:layout_width="wrap_content"
                            android:layout_height="80dp"
-                           android:src="@drawable/app_icon"
+                           android:src="@mipmap/ic_launcher"
                            android:background="@color/transparent"
                            android:paddingRight="20dp"
                            android:adjustViewBounds="true"
