--- a/android/res/layout-land/nav_view_header.xml
+++ b/android/res/layout-land/nav_view_header.xml
@@ -31,7 +31,7 @@
         android:layout_height="42dp"
         android:layout_gravity="center_vertical"
         android:layout_marginEnd="10dp"
-        android:src="@drawable/app_icon" />
+        android:src="@mipmap/ic_launcher" />
 
     <RelativeLayout
         android:layout_width="match_parent"
