--- a/android/res/layout-sw360dp-port/nav_view_header.xml
+++ b/android/res/layout-sw360dp-port/nav_view_header.xml
@@ -33,7 +33,7 @@
         android:layout_width="54dp"
         android:layout_height="54dp"
         android:layout_marginBottom="12dp"
-        android:src="@drawable/app_icon" />
+        android:src="@mipmap/ic_launcher" />
 
     <RelativeLayout
         android:layout_width="match_parent"
