--- a/android/res/layout/confirmation_dialog_multiple_selection_list_item.xml
+++ b/android/res/layout/confirmation_dialog_multiple_selection_list_item.xml
@@ -31,7 +31,7 @@
         android:layout_height="35dp"
         android:layout_gravity="center|center_vertical"
         android:layout_margin="2dp"
-        android:src="@drawable/app_icon" />
+        android:src="@mipmap/ic_launcher" />
 
     <LinearLayout
         android:layout_width="match_parent"
