--- a/android/res/layout/confirmation_dialog_no_selection_list_item.xml
+++ b/android/res/layout/confirmation_dialog_no_selection_list_item.xml
@@ -26,7 +26,7 @@
         android:layout_height="30dp"
         android:layout_gravity="center|center_vertical"
         android:layout_margin="2dp"
-        android:src="@drawable/app_icon" />
+        android:src="@mipmap/ic_launcher" />
 
     <LinearLayout
         android:layout_width="match_parent"
