--- a/android/res/layout/view_promotions_item.xml
+++ b/android/res/layout/view_promotions_item.xml
@@ -64,16 +64,17 @@
             android:id="@+id/view_promotions_item_download_textview"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:background="@color/basic_blue_highlight"
+            android:background="@drawable/bg_btn_conner15"
             android:clickable="false"
+            android:drawablePadding="6dp"
+            android:paddingStart="12dp"
+            android:paddingEnd="16dp"
             android:gravity="center_vertical"
+            android:layout_marginEnd="15dp"
             android:text="@string/download"
             android:textColor="@color/white"
-            android:textStyle="bold"
             android:textSize="@dimen/text_x_medium"
-            android:paddingStart="10dp"
-            android:paddingEnd="15dp"
-            android:drawablePadding="10dp"
+            android:textStyle="bold"
             app:drawableStartCompat="@drawable/promo_download_arrow_button" />
     </LinearLayout>
 </LinearLayout>
