--- a/android/res/drawable/frostwire_splash_screen.xml
+++ b/android/res/drawable/frostwire_splash_screen.xml
@@ -3,12 +3,10 @@
     <item>
         <color android:color="@color/basic_blue_highlight" />
     </item>
-    <item>
-        <bitmap
-            android:src="@mipmap/ic_launcher"
-            android:gravity="center_horizontal|center_vertical"
-            />
-    </item>
-    <item>
-    </item>
+<!--    <item>-->
+<!--        <bitmap-->
+<!--            android:src="@mipmap/ic_launcher"-->
+<!--            android:gravity="center_horizontal|center_vertical"-->
+<!--            />-->
+<!--    </item>-->
 </layer-list>
