--- a/android/res/values/themes.xml
+++ b/android/res/values/themes.xml
@@ -32,7 +32,7 @@
     </style>
 
     <style name="SplashScreenTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="android:windowBackground">@drawable/frostwire_splash_screen</item>
+<!--        <item name="android:windowBackground">@drawable/frostwire_splash_screen</item>-->
         <item name="colorPrimaryDark">@color/basic_blue_highlight_dark</item>
     </style>
 
